fixing dataset preview overflow prop

--- a/src/styles/scss/datasets/dataset-preview.scss
+++ b/src/styles/scss/datasets/dataset-preview.scss
@@ -47,6 +47,7 @@
   .dataset-preview {
     height: 0;
     display: block;
+    overflow: hidden;
   }
 
   &.show {
